# Ai-solutions

./: .env.example  .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
ai_solution/: settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  chatbot.py  forms.py  models.py  urls.py  views.py
core/management/commands/: seed_demo_data.py
core/migrations/: 0001_initial.py  0002_alter_article_author_alter_solution_icon.py  0003_alter_article_author.py  0004_promotionalevent_alter_article_options_and_more.py  0005_alter_article_options_alter_casestudy_options_and_more.py  0006_alter_contactinquiry_options.py  0007_remove_article_cover_image.py  0008_promotionalevent_image.py
core/static/core/js/: main.js
core/templates/core/: article_detail.html  base.html  case_studies.html  contact.html  dashboard.html  feedback.html  gallery.html  home.html  knowledge_hub.html  solutions.html  staff_login.html
core/templates/core/staff/: base_staff.html  dashboard.html  object_confirm_delete.html  object_form.html  object_list.html  query_confirm_delete.html  query_detail.html  query_list.html
core/templatetags/: filters.py
staticfiles/: staticfiles.json
staticfiles/core/css/: main.7fc29896ffb1.css
