[project]
name = "ai-solution"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "Django>=5.2,<5.3",
    "Pillow>=10.0",
    "whitenoise>=6.6",
    "dj-database-url>=2.2",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[tool.vercel]
entrypoint = "ai_solution.wsgi:application"